...
                    {/* Sign out */}
                    <TouchableOpacity  testID="sign-out-button" style={styles.logout} onPress={handleSignOut}>
                        <Text style={styles.logoutText}>Atsijungti</Text>
                    </TouchableOpacity>

                    {/* Delete account */}
                    <TouchableOpacity testID="delete-account-button" style={styles.delete} onPress={handleDelete}>
                        <Text style={styles.deleteText}>Ištrinti paskyrą</Text>
                    </TouchableOpacity>
                </ScrollView>
            )}

            <Footer
...
                onConfirm={handleRenew}
            />
            <CustomAlert
                visible={customConfirmVisible}
                iconType="delete"
                cancelText="Atšaukti"
                confirmText="Ištrinti"
                title="Ištrinti paskyrą"
                message="Ar tikrai norite visam laikui ištrinti savo paskyrą?"
                onClose={() => setCustomConfirmVisible(false)}
                onConfirm={confirmDelete}
            />
            <CustomAlert
...
